<?xml version="1.0"?>
<package format="3">
<name>tb3_dynamic_nav_jazzy</name>
<version>0.1.0</version>
<description>Dynamic obstacle spawn + Nav2 demo for ROS2 Jazzy using ros_gz</description>
<maintainer email="you@example.com">Your Name</maintainer>
<license>Apache-2.0</license>
<export>
  <build_type>ament_python</build_type>
</export>

<buildtool_depend>ament_python</buildtool_depend>
<depend>rclpy</depend>
<depend>geometry_msgs</depend>
<depend>ros_gz_interfaces</depend>
<depend>gazebo_msgs</depend>
<exec_depend>nav2_bringup</exec_depend>
</package>
